Arduino - I2C communication test

--- a/Arduino/platformio.ini
+++ b/Arduino/platformio.ini
@@ -12,3 +12,10 @@
 platform = atmelavr
 board = uno
 framework = arduino
+monitor_speed = 115200
+
+build_flags = -DDEBUG
+
+upload_port = COM6
+monitor_port = COM6
+
