Nordic - i2c communication, setting values to zigbee clusters

--- a/Nordic/prj.conf
+++ b/Nordic/prj.conf
@@ -4,6 +4,12 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
+# Enable the I2C driver
+CONFIG_I2C=y
+# Enable floating point format specifiers
+CONFIG_CBPRINTF_FP_SUPPORT=y
+
+
 #CONFIG_ZIGBEE_CHANNEL=11
 CONFIG_ZIGBEE_CHANNEL_SELECTION_MODE_MULTI=y
 CONFIG_NCS_SAMPLES_DEFAULTS=y
@@ -38,3 +44,7 @@ CONFIG_CRYPTO_INIT_PRIORITY=80
 CONFIG_NET_IPV6=n
 CONFIG_NET_IP_ADDR_CHECK=n
 CONFIG_NET_UDP=n
+
+
+
+
